<resources>
    <string name="app_name">Social Integration</string>
    <string name="facebook_app_id">1222656171525729</string>
    <string name="fb_login_protocol_scheme">fb1222656171525729</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_register_with_email">or,Register with Email...</string>
    <string name="email_id">Email ID</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or, continue with...</string>
    <string name="new_to_social_integration">New to Social Integration?</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
</resources>