<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="205dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/navy_blue"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/or_register_with_email"
        android:textColor="@color/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout_signup" />

    <RelativeLayout
        android:id="@+id/relative_layout_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <ImageButton
            android:id="@+id/google_signup"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/stroke"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_google_icon" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/google_signup">


            <ImageButton
                android:id="@+id/facebook_signup"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/stroke"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_facebook_icon"
                tools:ignore="UsingOnClickInXml" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/transparent"
                android:visibility="gone" />


        </FrameLayout>

    </RelativeLayout>


    <EditText
        android:id="@+id/email_signUp_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColorHint="@color/text1"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signUp_et"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/password_signup_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/create_password"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/text1"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/signUp_pass_layout"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/already_have_account"
        android:textColor="@color/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>